@@ -40,8 +40,6 @@ Option to mount on click, Shift+Click to open without mounting.
 When following symlinks, don't convert to the 'real' path. Up should
 go back to the directory containing the symlink.
 
-Save groups (Ctrl+[0-9]).
-
 Make Find expressions easier for beginners.
 
 Improve thumbnail handling:
