@@ -590,8 +590,8 @@
     <step><para>Move to another directory, or close the window, etc.</para></step>
     <step><para>Press <keycap>1</keycap> in any filer window to return
       to the first directory.</para></step> </procedure>
-   <para>Note that the groups are not saved, so you will lose them when you
-    restart the filer</para></sect1>
+   <para>The groups are saved automatically for next time the filer is loaded.
+  </para></sect1>
  </chapter>
 
  <chapter id="toolbar">
