@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+24-Dec-2001
+~~~~~~~~~~~
+File groups are now saved (automatically).
+The old 'AppMenu' file is no longer checked for (use AppInfo.xml instead).
+
 23-Dec-2001
 ~~~~~~~~~~~
 Added Version SOAP RPC.
